# agenda_bot_project

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  README.txt  config.json  main.py  pyproject.toml  requirements.txt  tareas.csv  test_verificacion.py  turnos.csv
.github/workflows/: python-app.yml
