[project]
name = "agenda-bot-project"
version = "0.1.0"
description = "Agenda Bot personal"
authors = [
    {name = "Gabi",email = "example@mail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
pre-commit = "^4.2.0"

